# inkcord

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  debug  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
inkcord/: __init__.py  client.py  enums.py  event_handling.py  exceptions.py  gateway_ev.py  http.py  http_gateway.py  inter.py  listener.py  resourceid.py  shared_types.py  slash_cmd.py  thread_owning.py  util.py
inkcord/types/: attach.py  avatar.py  channel.py  embed.py  emoji.py  guild.py  guild_mem.py  message.py  permissions.py  role.py  user.py
